sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: '(' expected but identifier found.
      if plusPetit(i+1,i){
         ^AlgCocktailSort1:12: error: illegal start of simple expression
     }
     ^AlgCocktailSort1:14: error: '(' expected but identifier found.
      if plusPetit(i+1,i){
         ^AlgCocktailSort1:19: error: illegal start of simple expression
    }
    ^AlgCocktailSort1:20: error: '(' expected but identifier found.
  } while inverse=true
          ^